# PRISM

./: README.md  asset-manifest.json  index.html  ollama_api.py  package-lock.json  package.json
.github/workflows/: automate_pr_msg.yml  evaluate_pr.yml  main.yml
Automatic-PR-Message-Generator/: README.md
Automatic-PR-Message-Generator-Sairammotupalli/mistral/: main.py
Automatic-PR-Message-Generator/deepseek-r1/: action.yml  completion.py  entrypoint.sh  main.py  pyproject.toml
Automatic-PR-Message-Generator/llam3.3/: entrypoint.sh
Automatic-PR-Message-Generator/llama3.3/: action.yml  completion.py  main.py  pyproject.toml
Automatic-PR-Message-Generator/mistral/: action.yml  completion.py  main.py  prompt.py  pyproject.toml
Automatic-PR-Message-Generator/mistral/.github/workflows/: write_pr.yml
LLM_Models/: chatgpt_main.py  claude_main.py  deepseek-r1_main.py  llama3.2_main.py  main_dispatcher.py  mistral_main.py  select_model.py
LLM_Models/core/: completion.py  diff_analysis.py  pr_body_generator.py  (+1 more)
chatgpt/: main.py
claude/: main.py
deepseek-r1/: completion.py  entrypoint.sh  main.py  prompt.py  pyproject.toml  text_summarizer.py
deepseek-r1/test-set/: test_file.py  test_file_2.yml
firebase/: upload_scores.py
llama3.2/: completion.py  main.py
llama3.3/: main.py  prompt.py  pull_request.py  pyproject.toml
mistral/: action.yml  completion.py  diff_analyzer_service.py  main.py
pr-scores-extension/: content.js  manifest.json
scores-dashboard/: README.md  package-lock.json  package.json
src/: App.css  App.js
test_set/: test_file.py
(+14 files in other folders)
