[tool.poetry]
name = "auto-pr-body-generator"
version = "0.1.0"
description = "A tool to auto-generate PR descriptions using Deepseek-R1"
authors = ["Sai Ram <sairammotupalli@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.1"
requests = "^2.26.0"
gitpython = "^3.1.24"
pygithub = "^1.55"
transformers = "^4.21.1"
torch = "^1.10.0"

[tool.poetry.scripts]
auto_pr_body_generator = "main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
